# 3cx-callscript

./: LICENSE  README.md  helsinki-call.desktop  main.py  pyproject.toml  shell.nix
